@@ -1,3 +1,3 @@
-DIST rails_best_practices-0.10.1.gem 50176 SHA256 1401368812f95d1ee6f4f7edf901048fec6216dd44df979105a17c3e58fa02c7 SHA512 3dbf9365e2b2bf49f69cfd2bbfece2a84fed131e0fb36f0501a78e6ffda3c29783e06ce3ba611a4a71a29dbd95f961c3e20241216f866fb866b7c34304a84782 WHIRLPOOL c952f192fdd48cffde748fcc9234df1f26b04b7a7f9c4bdf591f8a938ff60a545e1a1e3eb5719d66f7a4459b46bd04889d9c4cc18687313130aead30e48da230
 DIST rails_best_practices-1.11.1.gem 69632 SHA256 e3f79d464a80f5a4e855360648de3baf8fc39c80cb03324109a23bfa1f3e98a4 SHA512 4137d5b1ab20a192e4a84c6c556618e56c4ebfde9d8fa0de98a576b9d4232ef94c1629b040b156452b30173b6b9776cd408b037ec7c8dda07546919600513c24 WHIRLPOOL 26ba4e36a7dcdeedb60b97198e281047c13180004526608f064c846bb633918416f9d19667d974d328aa85438e263e7c03812284279abc5860c9b355438c50be
 DIST rails_best_practices-1.13.7.gem 75264 SHA256 35485b2c6e4e34bf0b9c5a8a66234fab406ba51da7787832329d1586f6113d6a SHA512 e9bea872efd9bf45477d070abbb2f42f814134d5898767f4bdea4834bd012ebcaca7b928636c420cdc9efe59de2c22e77e0979ff737d9a14974a80f5a2cb6c91 WHIRLPOOL 42d22b350041b8cd5a9e339577d67681cff3e51a20cf6fb83d75d76f0157813626975936c2d90be580f53b42780cd33f76ad4d65e6270838978fe86cf317add3
+DIST rails_best_practices-1.15.4.gem 77824 SHA256 2a29453a8bf630285b3a59a69f55fd5f44f75ca9e1ba6531a429136cff0427a2 SHA512 d9f035cd523e0a12e9446a03a582dc9a915ec12a4b4edaf78023cdd4c3a894de284891da8497b46b7404a8e7e5f05e4518fb602da4ee53cfdb2d82cff1e2eb8b WHIRLPOOL ea71f4419fc425ddd6297e7c4ddc75e484461e93ba525390e7e50e0831942728456d88489da59ef3a23b690f68c723571bf29e6519e83db96f54fdf51dcbf0f0
