@@ -1,6 +1,13 @@
 # ChangeLog for dev-ruby/rails_best_practices
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*rails_best_practices-1.15.4 (26 Sep 2014)
+
+  26 Sep 2014; Hans de Graaff <graaff@gentoo.org>
+  -rails_best_practices-0.10.1.ebuild, rails_best_practices-1.13.7.ebuild,
+  +rails_best_practices-1.15.4.ebuild:
+  Version bump.
 
 *rails_best_practices-1.13.7 (21 Jun 2013)
 
